<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2012 AT Computing BV

 This file is part of Linux Reference Card.

 Linux Reference Card is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 Linux Reference Card is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with Linux Reference Card.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="atcomp">AT Computing</string>
    <string name="atref">Reference Card</string>
    <string name="app_name">Linux Reference Card</string>
    <string name="confirm_ok">OK</string>
    <string name="flag_title">Synopsis of:</string>
    <string name="Copyright">© Copyright AT Computing 2011-2014</string>

    <string name="about">About</string>
    <string name="explain_ref">This reference contains a list of frequently used commands, vim subcommands, and regular expression notation.</string>
    <string name="explain_atc">AT Computing is a team of specialized educators and
		consultants in Linux, Open Source, UNIX and programming languages.</string>
    <string name="Visit_atcomputing">Visit http://www.atcomputing.nl</string>
    <string name="Version">Version</string>
    <string name="unknown">Unknown</string>
    <string name="label_cmdref">Command\nReference</string>
    <string name="label_viref">Vim\nReference</string>
    <string name="label_regexp">Regular\nExpressions</string>

    <string name="empty_list"></string>

    <string name="vi_move">Movement subcommands</string>
    <string name="vi_input">Input subcommands</string>
    <string name="vi_edit">Edit subcommands</string>
    <string name="vi_file">File and quit subcommands</string>

    <string name="re_basic">POSIX basic expressions – BRE</string>
    <string name="re_extended">POSIX extended expressions – ERE\nAdditions/deviations to BRE</string>
    <string name="re_perl">Perl regular expressions – PCRE\nAdditions to ERE</string>
    <string name="at_computing_logo">AT Computing Logo</string>
    <string name="new_in_linux_reference_card">New in Linux Reference Card</string>
</resources>